tests/vertical-slice/reject/fork_multi_stmt.hew
// Reject fixture: fork_multi_stmt — `fork { ... }` block body with multiple statements.
//
// The `fork { ... }` block form supports exactly one statement: a single
// direct function call (any arity). The checker type-checks the body, but MIR
// cannot yet spawn a multi-statement body, so two or more statements fail
// closed in HIR lowering before MIR/codegen see the unsupported task shape,
// with an actionable diagnostic.
//
// This fixture pins the fail-closed boundary at:
//   hew-hir/src/lower.rs fork block body guard
//
// Harness verb: hew compile
// Expected diagnostics:
//   - E_HIR
//   - "multi-statement `fork { }` bodies are not yet supported"
fn _foo() {}

fn _bar() {}

fn main() -> i64 {
    scope {
        fork {
            _foo();
            _bar();
        };
    };
    0
}
